package com.designpatterns.java.structural.decorator;
//Component
public interface Pizza {

  public String getDesc();
  public double getPrice();
}
