package com.designpatterns.java.structural.decorator;
//Concrete Component
public class SimplyNonVegPizza implements Pizza{

  @Override
  public String getDesc() {
    return "SimplyNonVegPizza (350)";
  }

  @Override
  public double getPrice() {
    return 350;
  }

}
